--- a/index.html
+++ b/index.html
@@ -112,22 +112,16 @@
         <!-- Three columns of text below the carousel -->
         <div class="row">
           <div class="col-lg-4">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2></h2>
-            <p></p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
-          </div><!-- /.col-lg-4 -->
-          <div class="col-lg-4">
             <img class="rounded-circle" src="SimpleRPG/images/1470750440446_1.jpg" width="160" height="160">
             <h2>website creator</h2>
             <p>Name:吳哲豪<br> From National Centeral Unversity Bussiness Administration</p>
-            <p><a class="btn btn-secondary" href="https://goo.gl/BUV8RZ" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="https://goo.gl/BUV8RZ" role="button">My Resume &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
           <div class="col-lg-4">
-            <img class="rounded-circle" src="data:image/gif;base64,R0lGODlhAQABAIAAAHd3dwAAACH5BAAAAAAALAAAAAABAAEAAAICRAEAOw==" alt="Generic placeholder image" width="140" height="140">
-            <h2></h2>
+            <img class="rounded-circle" src="SimpleRPG/images/sun.png" alt="Generic placeholder image" width="180" height="140">
+            <h2>看看明天天氣如何吧</h2>
             <p></p>
-            <p><a class="btn btn-secondary" href="#" role="button">View details &raquo;</a></p>
+            <p><a class="btn btn-secondary" href="weather/gistfile1.html" role="button">查詢天氣 &raquo;</a></p>
           </div><!-- /.col-lg-4 -->
         </div><!-- /.row -->
 
