--- a/index.html
+++ b/index.html
@@ -150,24 +150,26 @@
 
         <div class="row featurette">
           <div class="col-md-7 order-md-2">
-            <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading">我的高企營活動紀錄<span class="text-muted"></span></h2>
+            <p class="lead">大學生活中唯一參與的營隊,快來看看我在高企營做了甚麼好玩的事吧</p>
           </div>
           <div class="col-md-5 order-md-1">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+            <img class="featurette-image img-fluid mx-auto" src="SimpleRPG/images/ncuba%20camp.png" alt="Generic placeholder image">
           </div>
+             <p><a class="btn btn-lg btn-primary" href="https://www.facebook.com/media/set/?set=a.648586328632650.1073741839.438092829682002&type=1&l=18c8a6d93f" role="button">Learn More</a></p>
         </div>
 
         <hr class="featurette-divider">
 
         <div class="row featurette">
           <div class="col-md-7">
-            <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-            <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+            <h2 class="featurette-heading">我的第一部影片<span class="text-muted"></span></h2>
+            <p class="lead">這學期修了整合行銷,也拍了我的第一部影片,做的還不是很好,如果大家願意看,希望可以跟我提點一下哪裡可以改進</p>
           </div>
           <div class="col-md-5">
-            <img class="featurette-image img-fluid mx-auto" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+            <img class="featurette-image img-fluid mx-auto" src="SimpleRPG/images/vedio.png" alt="Generic placeholder image">
           </div>
+            <p><a class="btn btn-lg btn-primary" href="https://drive.google.com/file/d/15fOWt7el2cewqSUSvfCGoF4aBFLnFDzE/view?usp=sharing" role="button">Watch Now</a></p>
         </div>
 
         <hr class="featurette-divider">
